--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "dependencies": {
-    "@truffle/contract": "^4.5.0",
-    "express": "^4.17.3",
-    "nodemon": "^2.0.15",
-    "web3": "^1.7.1"
-  }
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js"
+    },
+    "dependencies": {
+        "@truffle/contract": "^4.5.0",
+        "ejs": "^3.1.6",
+        "express": "^4.17.3",
+        "nodemon": "^2.0.15",
+        "web3": "^1.7.1",
+        "window": "^4.2.7"
+    }
 }
